--- a/restaurantHome.html
+++ b/restaurantHome.html
@@ -7,7 +7,7 @@
 	<h1>Home Page</h1> 
 	<h1>Welcome {{email}}</h1> 
 </form>
-<h3>List Meal Posting</h3> 
+<a href="/donate">Donate</a>
 <br>
 <a href="/logout">Logout</a>
 	
