--- a/register.html
+++ b/register.html
@@ -3,11 +3,11 @@
 <head>
 </head>
 <body>
-<form action="/restaurantRegisterAuth" method="POST">
+<form action="/registerAuth" method="POST">
 	<input type="text" name = "email" placeholder="email" required/> </br>
     <input type="password" name = "password" placeholder="password" required/></br>
     <input type="text" name = "fname" placeholder="first name" required/></br>
-    <input type="text" name = "fname" placeholder="last name" required/></br>
+    <input type="text" name = "lname" placeholder="last name" required/></br>
     <input type="text" name = "address" placeholder="address" required/> </br>
     <input type="text" name = "city" placeholder="city" required/></br>
     <input type="text" name = "state" placeholder="state" required/></br>
