--- a/restaurantHome.html
+++ b/restaurantHome.html
@@ -5,8 +5,11 @@
 <body>
 <form action="/post" method="POST">
 	<h1>Home Page</h1> 
-	<h1>Welcome {{email}}</h1> 
+	<h1>Welcome {{email}}</h1>
+	<h3> you currently have {{points}} points </h3>
 </form>
+
+
 <a href="/donate">Donate</a>
 <br>
 <a href="/logout">Logout</a>
